scrollbar bugfix on about page

--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@ li{
   }
   
 .photo {
-  max-width: 27%;
+  max-width: 26%;
   min-width: 400px;
   margin-left: 25px;
   margin-top: 25px;
